--- a/slides/graphics/ErsatzSchaltbild2/document.tex
+++ b/slides/graphics/ErsatzSchaltbild2/document.tex
@@ -55,9 +55,9 @@ node[pos=0.5, above] {$i$} node[pos=0.2] (A3) {};
 left] {$u$};
 
 \draw[{Circle[open, fill=white]}-{Circle[open, fill=white]}, line style]  ($(C2) - (2pt, 0)$) -- (E1) node[pos=0.75,
-above] {$i + \mathrm{d}i$};
+above] {$i(z + \mathrm{d}z)$};
 \draw[-Stealth, shorten <= 1ex, shorten >= 1ex, line style] ($(E1) + (-2pt, 0)$) -- ($(E2) + (-2pt, 0)$) node[pos=0.5,
-right] {$u + \mathrm{d}u$};
+right] {$u(z + \mathrm{d}z)$};
 
 \draw[-{Circle[open, fill=white]}, line style] (D2) -- (E2);
 \draw[-{Circle[open, fill=white]}, line style] (B2) -- ($(D2) + (2pt, 0)$);
